@@ -15,6 +15,7 @@ Version 1.5.3-dev (development of upcoming release)
 * Refactor: Remove class OrderedSet
 * Refactor: Remove os.system() from class Execute
 * Refactor: Systray notifications send utilize DBUS instead of notify-send (#1156) (Felix Stupp @Zocker1999NET)
+* Refactor!: Remove unused config field "user_callback.no_logging" (#1887)
 * Dependency: Remove libnotify-bin (notify-send) (#1156)
 * Build: Replace "pycodestyle" linter with "flake8" (#1839)
 
